# cpyutl

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
python/cpyutl/: __init__.py  _cpyutl_test.pyi
src/: cpyutl.c  cpyutl.h
src/python/: CMakeLists.txt  module.c  module.h
tests/: test_cpyutl.py
